--- a/sass/theme/_front_page.scss
+++ b/sass/theme/_front_page.scss
@@ -12,7 +12,7 @@ body.home {
 }
 
 section.shows {
-	padding-top: 40px !important;
+	//padding-top: 40px !important;
 
     .body-shows {
 
@@ -215,7 +215,7 @@ section.block {
 section.blog {
 	padding-top: 0px !important;
 	color: black;
-	margin-bottom: 100px;
+	margin-bottom: 50px;
     
     .body {
     	text-align: left;
